// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AiAssignmentPanel matches snapshot in idle state 1`] = `
<div>
  <div
    class="border border-dashed border-gray-300 rounded-xl p-4 space-y-3 bg-gray-50"
  >
    <div
      class="flex flex-wrap items-center justify-between gap-3"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="text-sm font-medium text-gray-600"
        >
          Tipo de tarea:
        </span>
        <select
          class="text-sm border border-gray-300 rounded-md px-2 py-1 bg-white text-gray-900 focus:outline-none focus:ring-2 focus:ring-[#1E1E26]"
        >
          <option
            value="DESARROLLO"
          >
            DESARROLLO
          </option>
          <option
            value="TESTING"
          >
            TESTING
          </option>
          <option
            value="ANALISIS"
          >
            ANALISIS
          </option>
          <option
            value="REUNION"
          >
            REUNION
          </option>
          <option
            value="DISEÑO"
          >
            DISEÑO
          </option>
        </select>
      </div>
      <button
        class="flex items-center gap-1.5 px-3 py-1.5 text-sm bg-[#1E1E26] text-white rounded-lg hover:bg-[#13131a] disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
        type="button"
      >
        ✦ Sugerir asignación IA
      </button>
    </div>
  </div>
</div>
`;

exports[`AiAssignmentPanel matches snapshot with recommendations 1`] = `
<div>
  <div
    class="border border-dashed border-gray-300 rounded-xl p-4 space-y-3 bg-gray-50"
  >
    <div
      class="flex flex-wrap items-center justify-between gap-3"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="text-sm font-medium text-gray-600"
        >
          Tipo de tarea:
        </span>
        <select
          class="text-sm border border-gray-300 rounded-md px-2 py-1 bg-white text-gray-900 focus:outline-none focus:ring-2 focus:ring-[#1E1E26]"
        >
          <option
            value="DESARROLLO"
          >
            DESARROLLO
          </option>
          <option
            value="TESTING"
          >
            TESTING
          </option>
          <option
            value="ANALISIS"
          >
            ANALISIS
          </option>
          <option
            value="REUNION"
          >
            REUNION
          </option>
          <option
            value="DISEÑO"
          >
            DISEÑO
          </option>
        </select>
      </div>
      <button
        class="flex items-center gap-1.5 px-3 py-1.5 text-sm bg-[#1E1E26] text-white rounded-lg hover:bg-[#13131a] disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
        type="button"
      >
        ✦ Sugerir asignación IA
      </button>
    </div>
    <div
      class="overflow-hidden rounded-lg border border-gray-200 bg-white"
    >
      <div
        class="px-3 py-2 bg-[#1E1E26] flex items-center gap-2"
      >
        <span
          class="text-xs font-semibold text-white/80 uppercase tracking-wide"
        >
          ✦ Recomendación IA — Ranking de desarrolladores
        </span>
      </div>
      <table
        class="w-full text-sm"
      >
        <thead>
          <tr
            class="border-b border-gray-100 text-xs text-gray-500 bg-gray-50"
          >
            <th
              class="px-3 py-2 text-left font-medium"
            >
              #
            </th>
            <th
              class="px-3 py-2 text-left font-medium"
            >
              Desarrollador
            </th>
            <th
              class="px-3 py-2 text-left font-medium"
            >
              Score
            </th>
            <th
              class="px-3 py-2 text-left font-medium"
            >
              Justificación
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="border-b border-gray-50 last:border-0 transition-colors bg-emerald-50"
          >
            <td
              class="px-3 py-2.5 font-semibold text-gray-400 text-xs"
            >
              🥇
            </td>
            <td
              class="px-3 py-2.5 font-medium text-gray-900"
            >
              Dev One
            </td>
            <td
              class="px-3 py-2.5"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="w-20 h-1.5 bg-gray-200 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full rounded-full bg-emerald-500"
                    style="width: 88%;"
                  />
                </div>
                <span
                  class="text-xs font-bold text-gray-700 w-6"
                >
                  88
                </span>
              </div>
            </td>
            <td
              class="px-3 py-2.5 text-xs text-gray-600 max-w-[220px]"
            >
              Mejor candidato
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
